--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="dist/App.css">
   </head>
   <body>
+    <div id="root"></div>
     <script src="dist/App.js"></script>
   </body>
 </html>
