chore: fix running the example

--- a/example/index.html
+++ b/example/index.html
@@ -1,4 +1,5 @@
 <body>
   <div id="root"></div>
   <script src="./App.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
 </body>
