--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <title>react-simple-code-editor</title>
 
-    <link rel="stylesheet" type="text/css" href="dist/App.css">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
+    <link href="dist/App.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
